Showing full content on the main page and setting up development environment

--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -13,7 +13,8 @@
 		</header>
 
 		<section class="post-excerpt">
-			<p>{{excerpt}}&hellip;</p>
+			<p>{{content}}</p>
+			{{!-- <p>{{excerpt}}&hellip;</p> --}}
 		</section>
 	</div>
 </article>
